# crosswordApp

./: .gitignore  .gradlew.swp  LICENSE  azure-pipelines.yml  build.gradle  check.txt  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/: AndroidManifest.xml
app/src/androidTest/assets/: impossibleToBuild.json  notEnoughWords.json  tooLongWordsData.json  tooShortWordsData.json
app/src/androidTest/java/com/example/crosswordToLearn/: BadCrosswordDataInstrumentedTest.kt  BadCrosswordStateInstrumentedTest.kt  BadImageReadingInstrumentedTest.kt  ChooseTopicsInstrumentedTest.kt  DeleteCrosswordAfterSolveInstrumentedTest.kt  DeleteCrosswordInstrumentedTest.kt  ImpossibleToBuildInstrumentedTest.kt  NotEnoughWordsBecauseTooLongInstrumentedTest.kt  Utils.kt  (+7 more)
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Crossword.cpp  Crossword.h  CrosswordBuilder.cpp  CrosswordBuilder.h  CrosswordCell.h  LimitKeeper.cpp  LimitKeeper.h  Utils.h  WordRandomizer.cpp  WordRandomizer.h  Wrapper.cpp
app/src/main/res/layout/: activity_choose_topics.xml  activity_game.xml  activity_main.xml  activity_sett.xml  keyboard.xml  toolbar.xml  toolbar_activity_choose_topic.xml  toolbar_game.xml  toolbar_main.xml  toolbar_sett.xml
app/src/main/res/menu/: activity_game.xml
app/src/main/res/raw/: config.json  data.json  enable_sound.json  level.json  move_cursor_to_solved_squares.json  move_selection_to_solved_squares.json  star_number.json  test.json
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-ru-rRU/: strings.xml
(+59 files in other folders)
